--- a/CodeBreaker.cabal
+++ b/CodeBreaker.cabal
@@ -18,6 +18,11 @@ library
   exposed-modules:     Lib
   build-depends:       base >= 4.7 && < 5
                      , mtl
+                     , primes
+                     , containers
+                     , QuickCheck
+                     , fixed-list
+                     , random
   default-language:    Haskell2010
 
 executable CodeBreaker-exe
@@ -34,6 +39,7 @@ test-suite CodeBreaker-test
   main-is:             Spec.hs
   build-depends:       base
                      , CodeBreaker
+                     , QuickCheck
   ghc-options:         -threaded -rtsopts -with-rtsopts=-N
   default-language:    Haskell2010
 
