--- a/CodeBreaker.cabal
+++ b/CodeBreaker.cabal
@@ -23,6 +23,7 @@ library
                      , QuickCheck
                      , fixed-list
                      , random
+                     , deepseq
   default-language:    Haskell2010
 
 executable CodeBreaker-exe
@@ -40,6 +41,8 @@ test-suite CodeBreaker-test
   build-depends:       base
                      , CodeBreaker
                      , QuickCheck
+                     , criterion
+                     , random
   ghc-options:         -threaded -rtsopts -with-rtsopts=-N
   default-language:    Haskell2010
 
