--- a/CodeBreaker.cabal
+++ b/CodeBreaker.cabal
@@ -43,6 +43,7 @@ test-suite CodeBreaker-test
                      , criterion
                      , random
                      , deepseq
+                     , containers
   ghc-options:         -threaded -rtsopts -with-rtsopts=-N
   default-language:    Haskell2010
 
